k8s/base/services/media/jellyseer/service.yml
apiVersion: v1
kind: Service
metadata:
  name: jellyseer
  namespace: media
spec:
  ports:
    - port: 5055
      targetPort: 5055
      name: webui
  selector:
    app: jellyseer
