k8s/base/services/media/jellyseer/ingress.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jellyseer
  namespace: media
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`jellyseer.lffl.internal`)
      kind: Rule
      services:
        - name: jellyseer
          port: 5055
